kubernetes/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-label
  template:
    metadata:
      labels:
        app: postgres-label
    spec:
      containers:
        - image: postgres:14.0
          name: database
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: postgres-label
  ports:
    - port: 5432
