kubernetes/web-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server-label
  template:
    metadata:
      labels:
        app: web-server-label
    spec:
      containers:
      - image: localhost:5000/apps/demo
        name: web-server
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
spec:
  selector:
    app: web-server-label
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
